# axum-login-bearer

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
axum-login-bearer/: Cargo.toml  README.md
axum-login-bearer/src/: codec.rs  lib.rs  private.rs  signed.rs
axum-login-bearer/tests/: integration-test.rs
examples/sqlite-bearer/: Cargo.toml
examples/sqlite-bearer/src/web/: app.rs  auth.rs
