[package]
name = "axum-login-bearer"
version = "0.1.0"
description = "Extending axum-login to support bearer tokens."
edition = "2024"
homepage = "https://github.com/metatoaster/axum-login-bearer"
license = "MIT"
keywords = ["authentication", "authorization", "login", "axum", "sessions"]
categories = [
  "web-programming::http-server",
  "web-programming",
  "asynchronous",
]
repository = "https://github.com/metatoaster/axum-login-bearer"
# documentation = "https://docs.rs/axum-login-bearer"
readme = "README.md"

[dependencies]
axum = "0.8.0"
axum-login = "0.18.0"
tower-cookies = "0.11.0"
tower-layer = "0.3.2"
tower-service = "0.3.2"
tower-sessions = { version = "0.14.0", default-features = false }

[dev-dependencies]
axum = "0.8.0"
tokio = { version = "1.32.0", features = ["full"] }
tokio-test = "0.4.3"
tower = "0.5.2"
