[package]
name = "axum-login-bearer"
version = "0.1.0"
description = "Extending axum-login to support bearer tokens."
edition = "2024"
homepage = "https://github.com/metatoaster/axum-login-bearer"
license = "MIT"
keywords = ["authentication", "authorization", "login", "axum", "sessions"]
categories = [
  "web-programming::http-server",
  "web-programming",
  "asynchronous",
]
repository = "https://github.com/metatoaster/axum-login-bearer"
# documentation = "https://docs.rs/axum-login-bearer"
readme = "README.md"

[dependencies]
axum = "0.8.0"
axum-login = "0.18.0"
aes-gcm = { version = "0.10.0", optional = true }
base64 = { version = "0.22", optional = true }
cookie = { version = "0.18", optional = true }
hmac = { version = "0.12.0", optional = true }
rand = { version = "0.8", optional = true }
sha2 = { version = "0.10.0", optional = true }
tower = { version = "0.5", features = ["util"] }
tower-cookies = "0.11.0"
tower-layer = "0.3.2"
tower-service = "0.3.2"
tower-sessions = { version = "0.14.0", default-features = false }

[dev-dependencies]
axum = "0.8.0"
reqwest = { version = "0.12", features = ["cookies"] }
serial_test = "3.0.0"
tokio = { version = "1.32.0", features = ["full"] }
tokio-test = "0.4.3"
tower = "0.5.2"
tower-sessions = { version = "0.14.0", features = ["memory-store"] }

[features]
signed = [
    "base64",
    "hmac",
    "sha2",
    "cookie/signed",
]
private = [
    "aes-gcm",
    "cookie/secure",
    "rand",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
